--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/common": "8.2.14",
     "@angular/compiler": "8.2.14",
     "@angular/core": "8.2.14",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "8.2.14",
     "@angular/http": "7.2.15",
     "@angular/material": "8.0.1",
@@ -42,6 +43,7 @@
     "classlist.js": "1.1.20150312",
     "core-js": "3.1.3",
     "express": "4.17.1",
+    "firebase": "^7.14.2",
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
