--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@ckeditor/ckeditor5-image": "^18.0.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "ajv": "6.10.0",
     "arrive": "2.4.1",
     "bootstrap": "4.3.1",
@@ -48,7 +49,9 @@
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
     "moment": "2.24.0",
+    "ng-surveys": "0.0.4",
     "ng2-search-filter": "^0.5.1",
+    "ngx-bootstrap": "^3.1.3",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
     "rxjs": "6.5.5",
