--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@ckeditor/ckeditor5-image": "^18.0.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "agora-rtc-sdk": "3.0.2",
     "ajv": "6.10.0",
     "arrive": "2.4.1",
     "bootstrap": "4.3.1",
@@ -51,6 +52,7 @@
     "moment": "2.24.0",
     "ng-surveys": "0.0.4",
     "ng2-search-filter": "^0.5.1",
+    "ngx-agora": "^2.0.1",
     "ngx-bootstrap": "^3.1.3",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
