instalacion de service worker

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/platform-server": "8.2.14",
+    "@angular/pwa": "^0.1002.0",
     "@angular/router": "8.2.14",
+    "@angular/service-worker": "8.2.14",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@ckeditor/ckeditor5-image": "^18.0.0",
